# denotify

./: Cargo.toml  README.md  mod.ts  run.sh
examples/: error_handling.ts  minimal.ts  reuse.ts  simple.ts
src/: error.rs  error.ts  lib.rs  lib.ts  notification.rs  notification.ts  plugin.ts
